Refactored .get(0) -> getFirst() in lists in CustomRedisCacheWriter and CustomRedisCacheWriterHelper classes